@@ -20,7 +20,7 @@ spec = Gem::Specification.new do |s|
 
   s.required_ruby_version = '>= 1.8.5'
   
-  s.add_dependency        'rack',         '>= 0.3.0'
+  s.add_dependency        'rack',         '>= 0.9.1'
   s.add_dependency        'eventmachine', '>= 0.12.0'
   unless WIN
     s.add_dependency      'daemons',      '>= 1.0.9'
